--- a/excursion/index.html
+++ b/excursion/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Excursion</title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
- </head>
+</head>
  <body>
     <h1 class="header--main"> Discover hidden places in the world arround you </h1>
-    <p><a class=".link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
     <video autoplay loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
